@@ -222,6 +222,15 @@ and <b>abort</b> execution and transaction and fail task.</p>
   <td width="10%" valign="top">No, default <em>false</em></td>
 </tr>
 
+<tr>
+  <td width="12%" valign="top">treatWarningsAsErrors</td>
+  <td width="78%" valign="top">If true, SQLWarnings will be treated
+    like errors - and the logic selected via the onError attribute
+    applies.
+    <em>Since Ant 1.8.0</em>.<br/>
+  <td width="10%" valign="top">No, default <em>false</em></td>
+</tr>
+
 </table>
 
 <h3>Parameters specified as nested elements</h3>
